--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_guiritter
 description: "Reusable code for my projects"
-version: 1.2.1+4
+version: 1.3.1+5
 homepage:
 
 environment:
@@ -10,8 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  intl:
+ 
+  intl: 
+ 
+  flutter_localizations: 
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -54,3 +57,5 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/to/font-from-package
+
+  generate: true
