--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_guiritter
 description: "Reusable code for my projects"
-version: 1.3.1+5
+version: 1.4.1+6
 homepage:
 
 environment:
@@ -15,6 +15,10 @@ dependencies:
  
   flutter_localizations: 
     sdk: flutter
+
+  redux: ^5.0.0
+  flutter_redux: ^0.10.0
+  redux_thunk: ^0.4.0
 
 dev_dependencies:
   flutter_test:
