--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_guiritter
 description: "Reusable code for my projects"
-version: 1.8.0+12
+version: 1.9.0+13
 homepage:
 
 environment:
@@ -15,6 +15,8 @@ dependencies:
  
   flutter_localizations: 
     sdk: flutter
+
+  shared_preferences: ^2.5.1
 
   redux: ^5.0.0
   flutter_redux: ^0.10.0
