--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_guiritter
 description: "Reusable code for my projects"
-version: 1.7.0+13
+version: 1.8.0+14
 homepage:
 
 environment:
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  uuid: ^3.0.7
 
   flutter_svg: ^2.0.17
  
